--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="fonts.css">
 
+    <!-- Load configuration first -->
+    <script src="js/config.js"></script>
     <script src="js/i18n.js" defer></script>
     <script src="js/themes.js" defer></script>
     <script src="js/render.js" defer></script>
     <script src="js/router.js" defer></script>
     <script src="js/media.js" defer></script>
     <script src="js/sparkle.js" defer></script>
+    <script src="js/effects.js" defer></script>
+    <!-- Initialize app after all modules loaded -->
+    <script src="js/init.js" defer></script>
 </head>
 
 <body>
@@ -40,6 +45,14 @@
             <div class="settings-switcher">
                 <button class="settings-btn">⚙</button>
                 <div class="settings-dropdown">
+                    <div class="settings-section-label">Effects</div>
+                    <div class="settings-option" onclick="toggleGlitterText()">
+                        <span id="glitter-indicator">✨</span> Glitter Text
+                    </div>
+                    <div class="settings-option" onclick="toggle90sDecorations()">
+                        <span id="decorations-indicator">🎨</span> 90s Decorations
+                    </div>
+                    <div class="settings-divider"></div>
                     <div class="settings-section-label">Theme</div>
                     <div class="settings-option" onclick="themes.changeTheme('jr16')"><span class="theme-icon">🌿</span>
                         JR-16</div>
@@ -65,9 +78,7 @@
         </header>
 
         <div class="marquee-container">
-            <marquee scrollamount="5" data-i18n="marquee">*** WELCOME TO MY NEW PORTFOLIO SITE! STAY AWHILE AND BROWSE
-                THE GALLERIES ***
-                UPDATED: FEB 2026 ***</marquee>
+            <marquee scrollamount="5" data-i18n="marquee"></marquee>
         </div>
 
         <div class="content">
@@ -94,14 +105,25 @@
                         </div>
                     </div>
                     <div class="winamp-transport">
-                        <button class="winamp-btn radio-prev" title="Previous"><svg class="icon" viewBox="0 0 24 24"><path d="M6 6h2v12H6zm3.5 6l8.5 6V6z" transform="scale(-1,1) translate(-24,0)"/></svg></button>
-                        <button class="winamp-btn radio-playpause" title="Play"><svg class="icon" viewBox="0 0 24 24"><path d="M8 5v14l11-7z"/></svg></button>
-                        <button class="winamp-btn radio-next" title="Next"><svg class="icon" viewBox="0 0 24 24"><path d="M6 18l8.5-6L6 6v12zM16 6v12h2V6h-2z"/></svg></button>
+                        <button class="winamp-btn radio-prev" title="Previous"><svg class="icon" viewBox="0 0 24 24">
+                                <path d="M6 6h2v12H6zm3.5 6l8.5 6V6z" transform="scale(-1,1) translate(-24,0)" />
+                            </svg></button>
+                        <button class="winamp-btn radio-playpause" title="Play"><svg class="icon" viewBox="0 0 24 24">
+                                <path d="M8 5v14l11-7z" />
+                            </svg></button>
+                        <button class="winamp-btn radio-next" title="Next"><svg class="icon" viewBox="0 0 24 24">
+                                <path d="M6 18l8.5-6L6 6v12zM16 6v12h2V6h-2z" />
+                            </svg></button>
                     </div>
                     <div class="winamp-volume-row">
-                        <svg class="icon winamp-vol-icon" viewBox="0 0 24 24"><path d="M3 9v6h4l5 5V4L7 9H3z"/></svg>
+                        <svg class="icon winamp-vol-icon" viewBox="0 0 24 24">
+                            <path d="M3 9v6h4l5 5V4L7 9H3z" />
+                        </svg>
                         <input type="range" class="winamp-volume radio-volume" value="80" min="0" max="100">
-                        <svg class="icon winamp-vol-icon" viewBox="0 0 24 24"><path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"/></svg>
+                        <svg class="icon winamp-vol-icon" viewBox="0 0 24 24">
+                            <path
+                                d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z" />
+                        </svg>
                     </div>
                     <div class="winamp-seek-row">
                         <input type="range" class="winamp-seek" id="winamp-seek" value="0" min="0" max="100">
@@ -149,10 +171,16 @@
                 <div class="terminal-body">
                     <div class="terminal-line"><span class="terminal-prompt">$</span> <span
                             data-i18n="footer_copy">&copy; 2026 alex a montreal</span> &mdash; <a
-                            href="https://github.com/mtldev514" target="_blank" title="GitHub"><svg class="icon" viewBox="0 0 24 24"><path d="M12 .3a12 12 0 00-3.8 23.4c.6.1.8-.3.8-.6v-2c-3.3.7-4-1.6-4-1.6-.6-1.4-1.4-1.8-1.4-1.8-1.1-.8.1-.7.1-.7 1.2.1 1.9 1.3 1.9 1.3 1.1 1.8 2.8 1.3 3.5 1 .1-.8.4-1.3.8-1.6-2.7-.3-5.5-1.3-5.5-5.9 0-1.3.5-2.4 1.2-3.2-.1-.3-.5-1.5.1-3.2 0 0 1-.3 3.4 1.2a11.5 11.5 0 016 0c2.3-1.5 3.3-1.2 3.3-1.2.7 1.7.3 2.9.1 3.2.8.8 1.2 1.9 1.2 3.2 0 4.6-2.8 5.6-5.5 5.9.4.4.8 1.1.8 2.2v3.3c0 .3.2.7.8.6A12 12 0 0012 .3z"/></svg> github</a> · <a
-                            href="https://www.linkedin.com/in/alexcatus/?locale=fr_FR" target="_blank"
-                            title="LinkedIn"><svg class="icon" viewBox="0 0 24 24"><path d="M20.5 2h-17A1.5 1.5 0 002 3.5v17A1.5 1.5 0 003.5 22h17a1.5 1.5 0 001.5-1.5v-17A1.5 1.5 0 0020.5 2zM8 19H5v-9h3zM6.5 8.25A1.75 1.75 0 118.3 6.5a1.78 1.78 0 01-1.8 1.75zM19 19h-3v-4.74c0-1.42-.6-1.93-1.38-1.93A1.74 1.74 0 0013 14.19V19h-3v-9h2.9v1.3a3.11 3.11 0 012.7-1.4c1.55 0 3.36.86 3.36 3.66z"/></svg> linkedin</a> &mdash; <span
-                            class="terminal-dim"><span data-i18n="footer_visitors">Visits:</span> <span
+                            href="https://github.com/mtldev514" target="_blank" title="GitHub"><svg class="icon"
+                                viewBox="0 0 24 24">
+                                <path
+                                    d="M12 .3a12 12 0 00-3.8 23.4c.6.1.8-.3.8-.6v-2c-3.3.7-4-1.6-4-1.6-.6-1.4-1.4-1.8-1.4-1.8-1.1-.8.1-.7.1-.7 1.2.1 1.9 1.3 1.9 1.3 1.1 1.8 2.8 1.3 3.5 1 .1-.8.4-1.3.8-1.6-2.7-.3-5.5-1.3-5.5-5.9 0-1.3.5-2.4 1.2-3.2-.1-.3-.5-1.5.1-3.2 0 0 1-.3 3.4 1.2a11.5 11.5 0 016 0c2.3-1.5 3.3-1.2 3.3-1.2.7 1.7.3 2.9.1 3.2.8.8 1.2 1.9 1.2 3.2 0 4.6-2.8 5.6-5.5 5.9.4.4.8 1.1.8 2.2v3.3c0 .3.2.7.8.6A12 12 0 0012 .3z" />
+                            </svg> github</a> · <a href="https://www.linkedin.com/in/alexcatus/?locale=fr_FR"
+                            target="_blank" title="LinkedIn"><svg class="icon" viewBox="0 0 24 24">
+                                <path
+                                    d="M20.5 2h-17A1.5 1.5 0 002 3.5v17A1.5 1.5 0 003.5 22h17a1.5 1.5 0 001.5-1.5v-17A1.5 1.5 0 0020.5 2zM8 19H5v-9h3zM6.5 8.25A1.75 1.75 0 118.3 6.5a1.78 1.78 0 01-1.8 1.75zM19 19h-3v-4.74c0-1.42-.6-1.93-1.38-1.93A1.74 1.74 0 0013 14.19V19h-3v-9h2.9v1.3a3.11 3.11 0 012.7-1.4c1.55 0 3.36.86 3.36 3.66z" />
+                            </svg> linkedin</a> &mdash; <span class="terminal-dim"><span
+                                data-i18n="footer_visitors">Visits:</span> <span
                                 class="visitor-counter">......</span></span> <span class="terminal-cursor">█</span>
                     </div>
                 </div>
