--- a/admin.html
+++ b/admin.html
@@ -127,6 +127,17 @@
             <p style="font-size: 12px;">Need high-res uploads? Make sure your .env is active.</p>
 
             <div class="field-row" style="margin-top: 20px;">
+                <button onclick="window.location.href='config-manager.html'" style="width: 100%; height: 50px; font-weight: bold; cursor: pointer; background: linear-gradient(to bottom, #0080ff, #0060c0); color: white; border: 2px outset #fff;">
+                    ⚙️ ADVANCED CONFIGURATION MANAGER
+                </button>
+                <p class="admin-muted" style="margin-top: 5px;">
+                    * Manage media types, content types, and custom fields through a visual interface
+                </p>
+            </div>
+
+            <hr style="margin: 20px 0;">
+
+            <div class="field-row" style="margin-top: 20px;">
                 <button onclick="syncGitHub()" style="width: 100%; height: 40px; font-weight: bold; cursor: pointer;">
                     <img src="https://github.githubassets.com/favicons/favicon.svg" width="16"
                         style="vertical-align: middle;">
