update full app

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="fonts.css">
 
-    <!-- Load configuration first -->
-    <script src="js/config.js"></script>
+    <!-- Load configuration first (supports remote/local sources) -->
+    <script src="js/config-loader.js"></script>
     <script src="js/i18n.js" defer></script>
     <script src="js/themes.js" defer></script>
     <script src="js/render.js" defer></script>
